--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ html,
   height: 100%;
 }
 
+.main__sliderBanner {
+  margin-top: 78px;
+}
+
 /*---------------HEADER-----------------------------*/
 /*---------------HEADER-----------------------------*/
 .header {
@@ -33,13 +37,38 @@ html,
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
+  height: 100%;
 }
 
 .header__nav-link {
+  display: inline-block;
   font-weight: 700;
   font-size: 20px;
   margin-right: 50px;
   white-space: nowrap;
+  height: 100%;
+  position: relative;
+}
+
+.header__nav-link:after {
+  content: '';
+  left: 0;
+  bottom: -18px;
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  background-color: transparent;
+  transition: all 0.3s;
+}
+
+.header__nav-link:hover::after {
+  content: '';
+  left: 0;
+  bottom: -18px;
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  background-color: #1C62CD;
 }
 
 .header__nav-link:last-child {
@@ -47,11 +76,17 @@ html,
 }
 
 .haeder__logo {
-  margin-right: 50px;
+  margin-right: 15px;
+  transition: all 0.3s;
+}
+
+.haeder__logo:hover {
+  scale: 1.1;
 }
 
 .header__nav-link--location {
   position: relative;
+  margin-right: 15px;
 }
 
 .header__nav-link--location::before {
@@ -67,6 +102,7 @@ html,
 .header__nav-link-user {
   position: relative;
   margin-right: 10px;
+  transition: all 0.3s;
 }
 .header__nav-link-user span {
   position: absolute;
@@ -85,6 +121,10 @@ html,
 
 .header__nav-link-user:last-child {
   margin-right: 14px;
+}
+
+.header__nav-link-user:hover {
+  scale: 1.1;
 }
 
 .header__bottom {
@@ -106,6 +146,121 @@ html,
   display: flex;
   align-items: center;
   background: #F0F0F4;
+}
+
+/*---------------sliderBanner-----------------------------*/
+/*---------------sliderBanner-----------------------------*/
+.sliderBanner__inner {
+  display: flex;
+  justify-content: space-between;
+}
+.sliderBanner__wrapper {
+  position: relative;
+  max-width: 870px;
+}
+.sliderBanner__slider {
+  width: 100%;
+  height: 100%;
+}
+.sliderBanner__slide img {
+  width: 100%;
+  object-fit: cover;
+}
+.sliderBanner__arrow {
+  position: absolute;
+  top: 50%;
+  transition: all 0.3s;
+  transform: translateY(-50%);
+}
+.sliderBanner__arrow:hover {
+  scale: 1.1;
+}
+.sliderBanner__prev {
+  left: 20px;
+}
+.sliderBanner__next {
+  right: 20px;
+}
+.sliderBanner__dots {
+  position: absolute;
+  left: 50%;
+  bottom: 40px;
+  transform: translateX(-50%);
+}
+.sliderBanner__dots .slick-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sliderBanner__dots li {
+  margin-right: 9px;
+}
+.sliderBanner__dots li:last-child {
+  margin-right: 0;
+}
+.sliderBanner__dots button {
+  font-size: 0;
+  background-color: transparent;
+  width: 11px;
+  height: 11px;
+  display: flex;
+  align-items: center;
+}
+.sliderBanner__dots button::before {
+  content: "";
+  height: 11px;
+  width: 11px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 1px solid #fff;
+}
+.sliderBanner__dots .slick-active button::before {
+  background-color: #fff;
+  transition: all .3s;
+}
+
+.cardPromtion {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: 1px solid #CDCDCD;
+  border-radius: 4px;
+  position: relative;
+}
+.cardPromtion__top {
+  display: flex;
+  justify-content: space-between;
+}
+.cardPromtion__banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90px;
+  height: 30px;
+  background-color: #1C62CD;
+}
+.cardPromtion__banner p {
+  font-size: 12px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #fff;
+}
+.cardPromtion__newPrice {
+  font-weight: 700;
+  font-size: 27px;
+  color: #1C62CD;
+  padding-right: 27px;
+  position: relative;
+}
+.cardPromtion__newPrice::after {
+  position: absolute;
+  content: "";
+  top: 50%;
+  transform: translateY(-50%);
+  right: 6px;
+  width: 16px;
+  height: 18px;
+  background: url("../images/icon/iconRublBlue.svg") no-repeat;
 }
 
 /*# sourceMappingURL=style.css.map */
