--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
-// @import "variables";
-// @import "mixins";
+@import "variables";
+@import "mixins";
 
 // .test {
 //   @include font(#333, 400);
@@ -44,6 +44,15 @@ html,
 
 .logo {}
 
+.main {
+
+  // .main__sliderBanner
+
+  &__sliderBanner {
+    margin-top: 78px;
+  }
+}
+
 /*---------------HEADER-----------------------------*/
 /*---------------HEADER-----------------------------*/
 
@@ -60,31 +69,65 @@ html,
 }
 
 .header__nav {
-
   width: fit-content;
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
+  height: 100%;
+
 }
 
 .header__nav-link {
+  display: inline-block;
   font-weight: 700;
   font-size: 20px;
   margin-right: 50px;
   white-space: nowrap;
+  height: 100%;
+  position: relative;
+
 }
+
+
+.header__nav-link:after {
+  content: '';
+  left: 0;
+  bottom: -18px;
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  background-color: transparent;
+  transition: $trAll;
+}
+
+.header__nav-link:hover::after {
+  content: '';
+  left: 0;
+  bottom: -18px;
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  background-color: #1C62CD;
+
+}
+
 
 .header__nav-link:last-child {
   margin-right: 0;
 }
 
 .haeder__logo {
-  margin-right: 50px;
+  margin-right: 15px;
+  transition: $trAll;
+}
 
+.haeder__logo:hover {
+  scale: (1.1);
 }
 
 .header__nav-link--location {
   position: relative;
+  margin-right: 15px;
 
 }
 
@@ -104,6 +147,8 @@ html,
 .header__nav-link-user {
   position: relative;
   margin-right: 10px;
+  transition: $trAll;
+
 
   span {
     position: absolute;
@@ -123,6 +168,10 @@ html,
 
 .header__nav-link-user:last-child {
   margin-right: 14px;
+}
+
+.header__nav-link-user:hover {
+  scale: (1.1);
 }
 
 .header__bottom {
@@ -147,4 +196,193 @@ html,
   display: flex;
   align-items: center;
   background: #F0F0F4;
+}
+
+/*---------------sliderBanner-----------------------------*/
+/*---------------sliderBanner-----------------------------*/
+
+.sliderBanner {
+
+  // .sliderBanner__inner
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__wrapper {
+    position: relative;
+    max-width: 870px;
+
+  }
+
+  // .sliderBanner__slider
+
+  &__slider {
+    width: 100%;
+    height: 100%;
+  }
+
+  // .sliderBanner__slide
+
+  &__slide {
+
+
+
+    img {
+      width: 100%;
+
+      object-fit: cover;
+
+
+    }
+
+  }
+
+
+
+  // .sliderBanner__arrow
+
+  &__arrow {
+    position: absolute;
+    top: 50%;
+    transition: $trAll;
+    transform: translateY(-50%);
+  }
+
+  &__arrow:hover {
+    scale: (1.1);
+
+  }
+
+  // .sliderBanner__prev
+
+  &__prev {
+    left: 20px;
+  }
+
+  // .sliderBanner__next
+
+  &__next {
+    right: 20px;
+  }
+
+  // .sliderBanner__dots
+
+  &__dots {
+    position: absolute;
+    left: 50%;
+    bottom: 40px;
+    transform: translateX(-50%);
+
+    .slick-dots {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    li {
+      margin-right: 9px;
+    }
+
+    li:last-child {
+      margin-right: 0;
+    }
+
+    button {
+      font-size: 0;
+      background-color: transparent;
+      width: 11px;
+      height: 11px;
+      display: flex;
+      align-items: center;
+    }
+
+    button::before {
+      content: "";
+      height: 11px;
+      width: 11px;
+      background-color: transparent;
+      border-radius: 50%;
+      border: 1px solid #fff;
+    }
+
+    .slick-active button::before {
+      background-color: #fff;
+      transition: all .3s;
+    }
+  }
+}
+
+
+
+.cardPromtion {
+  display: flex;
+  flex-direction: column;
+  box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.25));
+  border: 1px solid #CDCDCD;
+  border-radius: 4px;
+  position: relative;
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90px;
+    height: 30px;
+    background-color: #1C62CD;
+
+    p {
+      font-size: 12px;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      color: #fff;
+    }
+  }
+
+  // .cardPromtion__newPrice
+
+  &__newPrice {
+    font-weight: 700;
+    font-size: 27px;
+    color: #1C62CD;
+    padding-right: 27px;
+    position: relative;
+  }
+
+  &__newPrice::after {
+    position: absolute;
+    content: "";
+    top: 50%;
+    transform: translateY(-50%);
+    right: 6px;
+    width: 16px;
+    height: 18px;
+    background: url('../images/icon/iconRublBlue.svg') no-repeat;
+  }
+
+  // .cardPromtion__newOldPrice
+
+  &__newOldPrice {}
+
+  // .cardPromtion__discription
+
+  &__discription {}
+
+  // .cardPromtion__period
+
+  &__period {}
+
+  // .cardPromtion__validUntil
+
+  &__validUntil {}
+
+  // .cardPromtion__date
+
+  &__date {}
 }
