--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,10 +29,10 @@
 /*--------------------------------------------*/
 /*--------------------------------------------*/
 html,
-.body {
+body {
   font-family: "SF Pro Display", sans-serif;
   color: #2f3035;
-  line-height: 120%;
+  line-height: 1.2;
 }
 
 .container {
@@ -212,15 +212,14 @@ html,
 
   &__wrapper {
     position: relative;
-    max-width: 870px;
-
+    margin-right: 36px;
   }
 
   // .sliderBanner__slider
 
   &__slider {
-    width: 100%;
-    height: 100%;
+    max-width: 870px;
+    height: 400px;
   }
 
   // .sliderBanner__slide
@@ -231,10 +230,8 @@ html,
 
     img {
       width: 100%;
-
-      object-fit: cover;
-
-
+      height: 100%;
+      object-fit: contain;
     }
 
   }
@@ -319,6 +316,7 @@ html,
 .cardPromtion {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.25));
   border: 1px solid #CDCDCD;
   border-radius: 4px;
@@ -366,23 +364,87 @@ html,
     background: url('../images/icon/iconRublBlue.svg') no-repeat;
   }
 
+
+
   // .cardPromtion__newOldPrice
 
-  &__newOldPrice {}
+  &__oldPrice {
+    margin-top: 7px;
+    font-weight: 400;
+    font-size: 14px;
+    color: #C4C4C4;
+    align-self: flex-end;
+    padding: 0px 20px 0px 10px;
+    position: relative;
+  }
+
+  &__oldPrice::after {
+    position: absolute;
+    content: "";
+    top: 50%;
+    transform: translateY(-50%);
+    right: 6px;
+    width: 8px;
+    height: 10px;
+    background: url('../images/icon/iconRublGrey.svg') no-repeat;
+  }
+
+  &__oldPrice::before {
+    position: absolute;
+    content: "";
+    top: -8%;
+    right: -60px;
+    width: 137px;
+    height: 20px;
+    background: url(../images/line.svg) no-repeat;
+  }
+
+  &__imgBox {
+    padding: 0px 80px 0px 60px;
+
+    img {
+      width: 125px;
+      height: 176px;
+    }
+  }
 
   // .cardPromtion__discription
 
-  &__discription {}
+  &__discription {
+    display: inline-block;
+    align-self: center;
+    font-weight: 700;
+    font-size: 18px;
+    text-align: center;
+    max-width: 200px;
+  }
 
   // .cardPromtion__period
 
-  &__period {}
+  &__period {
+    
+    margin-top: 7px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100px;
+    background-color: #F0F0F4;
+    align-items: center;
+    justify-content: center;
+  }
 
   // .cardPromtion__validUntil
 
-  &__validUntil {}
+  &__validUntil {
+    font-weight: 400;
+    font-size: 18px;
+  }
 
   // .cardPromtion__date
 
-  &__date {}
+  &__date {
+    font-family: 'Barlow';
+    font-weight: 700;
+    font-size: 18px;
+    color: #1C62CD;
+  }
 }
