--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,7 @@ body {
 }
 
 .container {
-  max-width: 1230px;
+  max-width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
   height: 100%;
@@ -351,6 +351,7 @@ body {
     color: #1C62CD;
     padding-right: 27px;
     position: relative;
+    white-space: nowrap;
   }
 
   &__newPrice::after {
@@ -376,6 +377,7 @@ body {
     align-self: flex-end;
     padding: 0px 20px 0px 10px;
     position: relative;
+    white-space: nowrap;
   }
 
   &__oldPrice::after {
@@ -403,8 +405,11 @@ body {
     padding: 0px 80px 0px 60px;
 
     img {
-      width: 125px;
-      height: 176px;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      // width: 125px;
+      // height: 176px;
     }
   }
 
@@ -564,3 +569,96 @@ body {
     text-transform: uppercase;
   }
 }
+
+/*---------------cardNav-----------------------------*/
+/*---------------cardNav-----------------------------*/
+.cardNav {
+  margin-top: 90px;
+
+  // .cardNav__list
+
+  &__list {
+    display: grid;
+    grid-template: repeat(2, 1fr)/repeat(3, 1fr);
+    gap: 30px;
+
+  }
+
+  // .cardNav__list-item
+
+  &__list-item {
+    border: 1px solid #CDCDCD;
+    border-radius: 3px;
+
+  }
+
+  // .cardNav__list-link
+
+  &__list-link {
+    display: flex;
+    align-items: stretch;
+    height: 100%;
+  }
+
+  &__list-link:hover {
+    box-shadow: 3px 3px 20px rgba(50, 50, 50, 0.25);
+    .cardNav__list-link-discroption {
+      color: #1C62CD;
+    }
+  }
+
+
+
+  &__list-link-content {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 10px 14px 20px;
+  }
+
+  // .cardNav__list-link-discroption
+
+  &__list-link-discroption {
+    font-family: 'Barlow';
+    font-weight: 700;
+    font-size: 23px;
+
+  }
+
+  // .cardNav__list-link-further
+
+  &__list-link-further {
+    width: fit-content;
+    font-weight: 400;
+    font-size: 14px;
+    color: #C4C4C4;
+    position: relative;
+  }
+
+  &__list-link-further::after {
+    position: absolute;
+    content: '';
+    top: 50%;
+    right: -12px;
+    width: 6px;
+    height: 9px;
+    transform: translateY(-50%);
+    background: url('../images/arrow-right-little.svg');
+  }
+
+  // .cardNav__list-link-imgBox
+
+  &__list-link-imgBox {
+    padding: 8px 0px;
+    margin: auto;
+  }
+
+  &__list-link-imgBox img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+
+.container {}
