--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 
 .container {
   max-width: 1200px;
-  padding: 0 15px;
+  padding: 0 45px;
   margin: 0 auto;
   height: 100%;
 }
@@ -243,6 +243,7 @@ body {
   width: 90px;
   height: 30px;
   background-color: #1C62CD;
+  margin-right: 10px;
 }
 .cardPromtion__actionBanner p {
   font-size: 12px;
@@ -528,10 +529,31 @@ body {
   background: none;
   font-weight: 500;
   font-size: 15px;
+  position: relative;
+  line-height: 1.8;
+}
+
+.popular__filter-btn:hover {
+  text-shadow: 0 0 .8px #333, 0 0 .8px #333;
+}
+
+.popular__filter-btn::after {
+  content: '';
+  left: 0;
+  bottom: -10px;
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  background-color: transparent;
+  transition: all 0.3s;
 }
 
 .popular__filter-btn--active {
-  text-shadow: 0 0 .65px #333, 0 0 .65px #333;
+  border-bottom: 3px solid #1C62CD;
+}
+
+.popular__cardList-wrapper {
+  position: relative;
 }
 
 .popular__cardList {
@@ -543,6 +565,94 @@ body {
   border: 1px solid #CDCDCD;
   border-radius: 3px;
   margin: 0 15px;
+  position: relative;
+}
+
+.popular__card-saleBanner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90px;
+  height: 30px;
+  background-color: #1C62CD;
+  visibility: hidden;
+}
+.popular__card-saleBanner--activ {
+  visibility: visible;
+}
+.popular__card-saleBanner p {
+  font-weight: 400;
+  font-size: 12px;
+  letter-spacing: 0.07em;
+  color: #FFFFFF;
+  text-transform: uppercase;
+}
+
+.popular__card-like {
+  position: absolute;
+  top: 16px;
+  right: 19px;
+}
+
+.popular__card-like {
+  position: absolute;
+  top: 16px;
+  right: 19px;
+  background: transparent;
+}
+
+.popular__card-like--active {
+  background: url("../images/heartBlue.svg") no-repeat;
+}
+.popular__card-like--active svg path {
+  fill: #1C62CD;
+}
+
+.popular__card-imgBox {
+  margin: 52px auto 0px;
+  max-width: 200px;
+  min-height: 200px;
+}
+
+.popular__card-imgBox img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.popular__card-discription {
+  display: block;
+  max-width: 230px;
+  margin: 14px auto 0px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  width: 230px;
+  height: 45px;
+}
+
+.popular__card-cost {
+  display: block;
+  font-weight: 700;
+  font-size: 30px;
+  margin: 25px auto 31px;
+  width: fit-content;
+}
+
+.popular__cardList-prev {
+  position: absolute;
+  top: 50%;
+  left: -45px;
+  transform: translateY(-50%);
+  margin-left: 10px;
+}
+
+.popular__cardList-next {
+  position: absolute;
+  top: 50%;
+  right: -45px;
+  transform: translateY(-50%);
 }
 
 /*# sourceMappingURL=style.css.map */
