--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,7 +35,11 @@ body {
   line-height: 1.2;
 }
 
-.wrapper {}
+.wrapper {
+  min-height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
 
 .container {
   max-width: 1200px;
@@ -744,7 +748,43 @@ body {
 
 }
 
-.popular__card-link {}
+.popular__card-link {
+  position: relative;
+}
+
+.popular__card-link:hover {
+  cursor: pointer;
+  box-shadow: 3px 3px 20px rgba(50, 50, 50, 0.25);
+
+  .popular__card-discription,
+  .popular__card-cost {
+    color: #1C62CD;
+  }
+
+}
+
+.popular__card-link::before {
+  position: absolute;
+  content: 'посмотреть товар';
+  top: 140px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-weight: 400;
+  font-size: inherit;
+  line-height: 24px;
+  text-align: center;
+  padding: 18px 20px;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  white-space: nowrap;
+  opacity: 0;
+  transition: $trAll;
+}
+
+.popular__card-link:hover::before {
+  opacity: 0.9;
+}
 
 .popular__card-saleBanner {
   display: flex;
@@ -782,23 +822,26 @@ body {
   background: transparent;
 }
 
-.popular__card-like--active  {
+.popular__card-like--active {
   background: url('../images/heartBlue.svg') no-repeat;
+
   svg path {
     fill: #1C62CD;
   }
 }
 
 .popular__card-imgBox {
-  margin: 52px auto 0px;
-  max-width: 200px;
-  min-height: 200px;
+  // padding: 0 35px;
+  margin: 26px auto 0;
+  width: 80%;
+  height: 200px;
 }
 
 .popular__card-imgBox img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+
 
 }
 
@@ -810,21 +853,88 @@ body {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
-  width: 230px;
-  height: 45px;
+  max-width: 80%;
+  max-height: 45px;
+  overflow: hidden;
+
 }
 
-.popular__card-cost-wrapper {}
+.popular__card-cost-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  position: relative;
+}
+
+.popular__card-cost-wrapper::after {
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+
+}
 
 .popular__card-cost {
-  display: block;
   font-weight: 700;
   font-size: 30px;
-  margin: 25px auto 31px;
-  width: fit-content;
+  margin: 25px auto 40px;
+  white-space: nowrap;
+
 }
 
-.popular__card-basket {}
+.popular__card-basket {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: #1C62CD;
+  padding: 10px 16px 7.5px 14px;
+  border: 1px solid #1C62CD;
+  border-radius: 10px 0px 0px 0px;
+
+}
+
+.popular__card-basket svg path {
+  fill: #fff;
+}
+
+.popular__card-productAbsent {
+  // display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+  display: none;
+}
+
+.popular__card-productAbsent--visible {
+  display: flex;
+}
+
+.popular__card-productAbsent-text {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.popular__card-productAbsent-link {
+  font-weight: 400;
+  font-size: 16px;
+  color: #1C62CD;
+  text-decoration: underline;
+  transition: $trAll;
+  line-height: 1.4;
+  margin-top: 13px;
+}
+
+.popular__card-productAbsent-link:hover {
+  scale: (1.1);
+}
 
 .popular__cardList-arrow {}
 
