--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 /*--------------------------------------------*/
 /*--------------------------------------------*/
 /*--------------------------------------------*/
@@ -117,6 +118,7 @@ body {
   margin-right: 10px;
   transition: all 0.3s;
 }
+
 .header__nav-link-user span {
   position: absolute;
   font-weight: 500;
@@ -143,16 +145,20 @@ body {
 .header__bottom {
   margin-top: 20px;
 }
+
 .header__bottom .header__nav {
   width: 100%;
 }
+
 .header__bottom .header__nav-link {
   font-weight: 400;
   margin-right: 10px;
 }
+
 .header__bottom .header__nav-link:hover {
   text-shadow: 0 0 .65px #333, 0 0 .65px #333;
 }
+
 .header__bottom .header__nav-link:last-child {
   margin-right: 0;
 }
@@ -170,51 +176,69 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
 .sliderBanner__wrapper {
+  min-width: 0;
   position: relative;
   margin-right: 36px;
 }
-.sliderBanner__slider {
-  max-width: 870px;
-  height: 400px;
+
+.sliderBanner .slick-container {
+  height: 60%;
 }
+
+.sliderBanner .slick-slider,
+.sliderBanner .slick-list,
+.sliderBanner .slick-track {
+  height: 100%;
+}
+
 .sliderBanner__slide img {
+  object-fit: contain;
   width: 100%;
   height: 100%;
-  object-fit: contain;
 }
+
 .sliderBanner__arrow {
   position: absolute;
   top: 50%;
   transition: all 0.3s;
   transform: translateY(-50%);
 }
+
 .sliderBanner__arrow:hover {
   scale: 1.1;
 }
+
 .sliderBanner__prev {
   left: 20px;
 }
+
 .sliderBanner__next {
   right: 20px;
 }
+
 .sliderBanner__dots {
   position: absolute;
   left: 50%;
   bottom: 40px;
   transform: translateX(-50%);
 }
+
 .sliderBanner__dots .slick-dots {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .sliderBanner__dots li {
   margin-right: 9px;
 }
+
 .sliderBanner__dots li:last-child {
   margin-right: 0;
 }
+
 .sliderBanner__dots button {
   font-size: 0;
   background-color: transparent;
@@ -223,6 +247,7 @@ body {
   display: flex;
   align-items: center;
 }
+
 .sliderBanner__dots button::before {
   content: "";
   height: 11px;
@@ -231,6 +256,7 @@ body {
   border-radius: 50%;
   border: 1px solid #fff;
 }
+
 .sliderBanner__dots .slick-active button::before {
   background-color: #fff;
   transition: all .3s;
@@ -245,10 +271,13 @@ body {
   border-radius: 4px;
   position: relative;
 }
+
 .cardPromtion__top {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
+
 .cardPromtion__actionBanner {
   display: flex;
   justify-content: center;
@@ -258,12 +287,14 @@ body {
   background-color: #1C62CD;
   margin-right: 10px;
 }
+
 .cardPromtion__actionBanner p {
   font-size: 12px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: #fff;
 }
+
 .cardPromtion__newPrice {
   font-weight: 700;
   font-size: 27px;
@@ -272,7 +303,8 @@ body {
   position: relative;
   white-space: nowrap;
 }
-.cardPromtion__newPrice::after {
+
+/* .cardPromtion__newPrice::after {
   position: absolute;
   content: "";
   top: 50%;
@@ -281,9 +313,9 @@ body {
   width: 16px;
   height: 18px;
   background: url("../images/icon/iconRublBlue.svg") no-repeat;
-}
+} */
 .cardPromtion__oldPrice {
-  margin-top: 7px;
+  /* margin-top: 7px; */
   font-weight: 400;
   font-size: 14px;
   color: #C4C4C4;
@@ -292,6 +324,7 @@ body {
   position: relative;
   white-space: nowrap;
 }
+
 .cardPromtion__oldPrice::after {
   position: absolute;
   content: "";
@@ -302,6 +335,7 @@ body {
   height: 10px;
   background: url("../images/icon/iconRublGrey.svg") no-repeat;
 }
+
 .cardPromtion__oldPrice::before {
   position: absolute;
   content: "";
@@ -311,14 +345,17 @@ body {
   height: 20px;
   background: url(../images/line.svg) no-repeat;
 }
+
 .cardPromtion__imgBox {
   padding: 0px 80px 0px 60px;
 }
+
 .cardPromtion__imgBox img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
+
 .cardPromtion__discription {
   display: inline-block;
   align-self: center;
@@ -327,20 +364,24 @@ body {
   text-align: center;
   max-width: 200px;
 }
+
 .cardPromtion__period {
   margin-top: 7px;
   display: flex;
   flex-direction: column;
-  min-height: 100px;
   background-color: #F0F0F4;
   align-items: center;
   justify-content: center;
 }
+
 .cardPromtion__validUntil {
+  padding-top: 25px;
   font-weight: 400;
   font-size: 18px;
 }
+
 .cardPromtion__date {
+  padding-bottom: 25px;
   font-family: 'Barlow';
   font-weight: 700;
   font-size: 18px;
@@ -354,6 +395,7 @@ body {
   flex-direction: column;
   margin-top: 90px;
 }
+
 .search__form-top {
   white-space: nowrap;
   display: flex;
@@ -399,7 +441,7 @@ body {
   font-size: 20px;
 }
 
-.checkbox-btn input[type=radio]:checked + span {
+.checkbox-btn input[type=radio]:checked+span {
   background: #F0F0F4;
   text-shadow: 0 0 .65px #333, 0 0 .65px #333;
 }
@@ -408,18 +450,18 @@ body {
   cursor: pointer;
 }
 
-.checkbox-btn input[type=radio]:active:not(:disabled) + span {
+.checkbox-btn input[type=radio]:active:not(:disabled)+span {
   background: #d2c5ac;
   color: #000;
 }
 
-.checkbox-btn input[type=radio]:disabled + span {
+.checkbox-btn input[type=radio]:disabled+span {
   background: #efefef;
   color: #666;
   cursor: default;
 }
 
-.checkbox-btn input[type=radio]:checked:disabled + span {
+.checkbox-btn input[type=radio]:checked:disabled+span {
   background: #f7efdc;
 }
 
@@ -430,6 +472,7 @@ body {
   width: 100%;
   justify-content: space-between;
 }
+
 .search__input {
   width: 100%;
   min-height: 100%;
@@ -439,6 +482,7 @@ body {
   color: #656464;
   padding-left: 20px;
 }
+
 .search__button-submit {
   min-height: 100%;
   min-width: 145px;
@@ -455,37 +499,45 @@ body {
 .cardNav {
   margin-top: 90px;
 }
+
 .cardNav__list {
   display: grid;
   grid-template: repeat(2, 1fr)/repeat(3, 1fr);
   gap: 30px;
 }
+
 .cardNav__list-item {
   border: 1px solid #CDCDCD;
   border-radius: 3px;
 }
+
 .cardNav__list-link {
   display: flex;
   align-items: stretch;
   height: 100%;
 }
+
 .cardNav__list-link:hover {
   box-shadow: 3px 3px 20px rgba(50, 50, 50, 0.25);
 }
+
 .cardNav__list-link:hover .cardNav__list-link-discroption {
   color: #1C62CD;
 }
+
 .cardNav__list-link-content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 20px 10px 14px 20px;
 }
+
 .cardNav__list-link-discroption {
   font-family: 'Barlow';
   font-weight: 700;
   font-size: 23px;
 }
+
 .cardNav__list-link-further {
   width: fit-content;
   font-weight: 400;
@@ -493,6 +545,7 @@ body {
   color: #C4C4C4;
   position: relative;
 }
+
 .cardNav__list-link-further::after {
   position: absolute;
   content: '';
@@ -503,10 +556,12 @@ body {
   transform: translateY(-50%);
   background: url("../images/arrow-right-little.svg");
 }
+
 .cardNav__list-link-imgBox {
   padding: 8px 0px;
   margin: auto;
 }
+
 .cardNav__list-link-imgBox img {
   width: 100%;
   height: 100%;
@@ -588,6 +643,7 @@ body {
   cursor: pointer;
   box-shadow: 3px 3px 20px rgba(50, 50, 50, 0.25);
 }
+
 .card-link:hover .card-discription,
 .card-link:hover .card-cost {
   color: #1C62CD;
@@ -625,9 +681,11 @@ body {
   background-color: #1C62CD;
   visibility: hidden;
 }
+
 .card-saleBanner--active {
   visibility: visible;
 }
+
 .card-saleBanner p {
   font-weight: 400;
   font-size: 12px;
@@ -646,6 +704,7 @@ body {
 .card-like--active {
   background: url("../images/heartBlue.svg") no-repeat;
 }
+
 .card-like--active svg path {
   fill: #1C62CD;
 }
@@ -778,21 +837,25 @@ body {
 .bannerDiscount {
   margin-top: 86px;
 }
+
 .bannerDiscount__inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #1C62CD;
 }
+
 .bannerDiscount__imgBox {
   margin-left: 70px;
   display: flex;
 }
+
 .bannerDiscount__imgBox img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
+
 .bannerDiscount__discription {
   display: inline-block;
   font-weight: 700;
@@ -802,6 +865,7 @@ body {
   margin: 28px auto;
   width: 26%;
 }
+
 .bannerDiscount__button {
   margin-right: 123px;
   width: fit-content;
@@ -926,6 +990,43 @@ body {
 
 .footer__botton-link:last-child {
   margin-right: 0;
+}
+
+/*---------------------------MEDIA----------------------------*/
+/*---------------------------MEDIA----------------------------*/
+/*===========================1200============================*/
+@media (max-width: 1200px) {
+
+  .cardPromtion__validUntil {
+    padding-top: 5px;
+  }
+
+  .cardPromtion__date {
+    padding-bottom: 5px;
+  }
+}
+
+/*===========================1120============================*/
+@media (max-width: 1120px) {
+  .cardPromtion__newPrice {
+    font-size: 20px;
+  }
+
+}
+
+/*===========================1000============================*/
+@media (max-width: 1000px) {
+
+  
+.sliderBanner__inner {
+  flex-direction: column;
+  
+}
+.cardPromtion {
+  max-width: fit-content;
+  margin: 20px auto 0px;
+}
+
 }
 
 /*# sourceMappingURL=style.css.map */
